--- a/AV_spring_MVC/.settings/org.eclipse.wst.common.component
+++ b/AV_spring_MVC/.settings/org.eclipse.wst.common.component
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="AV_spring_MVC">
+    <wb-module deploy-name="VisCraft">
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
-        <property name="context-root" value="AV_spring_MVC"/>
-        <property name="java-output-path" value="/AV_spring_MVC/build/classes"/>
+        <property name="java-output-path" value="/VisCraft/build/classes"/>
+        <property name="context-root" value="VisCraft"/>
     </wb-module>
 </project-modules>
